# privox

./: .gitattributes  .gitignore  .rustfmt.toml  AGENT.md  Cargo.toml  MASTERPROMPT.md  README.md  REQUIREMENTS.md  SCRATCHPAD.md
docs/: REQUIREMENTS_ADDENDUM_001.md
src/: config.rs  detokenizer.rs  error.rs  main.rs  proxy.rs  server.rs  tokenizer.rs  types.rs
src/detector/: mod.rs  ner.rs  presidio.rs  regex.rs
src/vault/: crypto.rs  mod.rs  sqlite.rs
tests/integration/: proxy_test.rs  streaming_test.rs
